<resources>
    <string name="app_name">Sorteio Integrador</string>
    <string name="app_description">Desafio</string>
    <string name="mode_offline">Modo Offline</string>
    <string name="mode_online">Modo Online</string>
    <string name="on">Online</string>
    <string name="off">Offline</string>
    <string name="mode">MODO:</string>
    <string name="raffle">Sortear</string>
    <string name="view_code">Ver Código</string>
    <string name="exit">Sair</string>
    <string name="about">Sobre</string>
    <string name="team">Lucas Santos | Gabriel Mariano | Fabricio Gondin</string>
    <string name="no_conected">Sem Conexão</string>
</resources>
